--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "jade": "^1.11.0"
+    "express-session": "^1.15.6",
+    "jade": "^1.11.0",
+    "mongoose": "^5.0.0-rc1"
   }
 }
