--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "jade": "^1.11.0",
-    "mongoose": "^5.0.0-rc1"
+    "mongoose": "^5.0.0-rc1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
