--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.6",
     "jade": "^1.11.0",
+    "md5": "^2.2.1",
     "mongoose": "^5.0.0-rc1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pbkdf2-password": "^1.2.1"
   }
 }
